Ajuste tildes repositorio

--- a/source/pug/pages/3-tema.pug
+++ b/source/pug/pages/3-tema.pug
@@ -48,61 +48,72 @@ include ../mixins/functions
                 br
                 p Los sistemas de información pueden ser enfocados en diferentes aspectos o necesidades, en el mercado actual pueden encontrarse diferentes tipos, entre los más comunes están:                         
                 .row.justify-content-center.mt-2
-
-                    .col-lg-6
-                                
+                    .col-12                
+                            
                         #accordionExample.accordion.mt-5
                             .card
                                 #headingOne.card-header.bg-color-4
                                     p.mt-3
                                         button.btn.btn-link(type='button', data-toggle='collapse', data-target='#collapseOne', aria-expanded='true', aria-controls='collapseOne')
-                                            p.text-2.mb-2.text-center Sistemas de procesamiento de transacciones
+                                            h3.text-2 Sistemas de procesamiento de transacciones
                                 #collapseOne.collapse.show(aria-labelledby='headingOne', data-parent='#accordionExample')
                                     .card-body.bg-color-5
-                                        | Los cuales procesan la información producida en la operación cotidiana de la organización, la cual es necesaria para toma de decisiones a nivel operacional y táctico. 
+                                        .row.align-items-center.justify-content-center
+                                            .col-12
+                                                p Los cuales procesan la información producida en la operación cotidiana de la organización, la cual es necesaria para toma de decisiones a nivel operacional y táctico. 
                     
                             .card
                                 #headingTwo.card-header.bg-color-4
                                     p.mt-3
                                         button.btn.btn-link.collapsed(type='button', data-toggle='collapse', data-target='#collapseTwo', aria-expanded='false', aria-controls='collapseTwo')
-                                            p(style="font-size: 20px; color: #fff").mb-2.text-center Sistema de control de procesos de negocio
+                                            h3.text-2 Sistema de control de procesos de negocio
                                 #collapseTwo.collapse(aria-labelledby='headingTwo', data-parent='#accordionExample')
                                     .card-body.bg-color-5
-                                        | Permiten tener información en tiempo real del estado de la operación, específicamente en plantas industrial o de manufactura. 
+                                        .row.align-items-center.justify-content-center
+                                            .col-12
+                                                p Permiten tener información en tiempo real del estado de la operación, específicamente en plantas industrial o de manufactura. 
                             
                             .card
                                 #headingThree.card-header.bg-color-4
                                     p.mt-3
                                         button.btn.btn-link.collapsed(type='button', data-toggle='collapse', data-target='#collapseThree', aria-expanded='false', aria-controls='collapseThree')
-                                            p(style="font-size: 20px; color: #fff").mb-2.text-center Sistemas de colaboración empresarial
+                                            h3.text-2 Sistemas de colaboración empresarial
                                 #collapseThree.collapse(aria-labelledby='headingThree', data-parent='#accordionExample')
                                     .card-body.bg-color-5
-                                        | Es una de las opciones con mayor cobertura organizacional dada la posibilidad de múltiples usuarios, se puede integrar desde los proveedores hasta los clientes. 
+                                        .row.align-items-center.justify-content-center
+                                            .col-12
+                                                p Es una de las opciones con mayor cobertura organizacional dada la posibilidad de múltiples usuarios, se puede integrar desde los proveedores hasta los clientes. 
 
                             .card
                                 #headingFour.card-header.bg-color-4
                                     p.mt-3
                                         button.btn.btn-link.collapsed(type='button', data-toggle='collapse', data-target='#collapseFour', aria-expanded='false', aria-controls='collapseThree')
-                                            p(style="font-size: 20px; color: #fff").mb-2.text-center Sistemas de información de gestión
+                                            h3.text-2 Sistemas de información de gestión
                                 #collapseFour.collapse(aria-labelledby='headingThree', data-parent='#accordionExample')
                                     .card-body.bg-color-5
-                                        | Se enfocan en apoyar la toma de decisiones a nivel gerencial, ya que soportan la gestión de la organización, con informes estadísticos que recopilan datos de diferentes fuentes. 
+                                        .row.align-items-center.justify-content-center
+                                            .col-12
+                                                p Se enfocan en apoyar la toma de decisiones a nivel gerencial, ya que soportan la gestión de la organización, con informes estadísticos que recopilan datos de diferentes fuentes. 
                             .card
                                 #headingFive.card-header.bg-color-4
                                     p.mt-3
                                         button.btn.btn-link.collapsed(type='button', data-toggle='collapse', data-target='#collapseFive', aria-expanded='false', aria-controls='collapseThree')
-                                            p(style="font-size: 20px; color: #fff").mb-2.text-center Sistema de apoyo a la toma de decisiones
+                                            h3.text-2 Sistema de apoyo a la toma de decisiones
                                 #collapseFive.collapse(aria-labelledby='headingThree', data-parent='#accordionExample')
                                     .card-body.bg-color-5
-                                        | Este modelo también sirve de soporte para la toma de decisiones gerenciales o directivas, especialmente cuando esta la necesidad de proyectar nuevos mercados o posibles inversiones de capital en nuevas unidades de negocio.
+                                        .row.align-items-center.justify-content-center
+                                            .col-12
+                                                p Este modelo también sirve de soporte para la toma de decisiones gerenciales o directivas, especialmente cuando esta la necesidad de proyectar nuevos mercados o posibles inversiones de capital en nuevas unidades de negocio.
                             .card
                                 #headingSix.card-header.bg-color-4
                                     p.mt-3
                                         button.btn.btn-link.collapsed(type='button', data-toggle='collapse', data-target='#collapseSix', aria-expanded='false', aria-controls='collapseThree')
-                                            p(style="font-size: 20px; color: #fff").mb-2.text-center Sistema de información ejecutiva
+                                            h3.text-2 Sistema de información ejecutiva
                                 #collapseSix.collapse(aria-labelledby='headingThree', data-parent='#accordionExample')
                                     .card-body.bg-color-5
-                                        | El cual presenta la información más relevante de la información de forma gráfica y dinámica, permitiendo conocer lo necesario para que la alta dirección tome las acciones pertinentes según la situación. 
+                                        .row.align-items-center.justify-content-center
+                                            .col-12
+                                                p El cual presenta la información más relevante de la información de forma gráfica y dinámica, permitiendo conocer lo necesario para que la alta dirección tome las acciones pertinentes según la situación. 
 #conceptos
 .container
     .header-ecored
@@ -126,7 +137,7 @@ include ../mixins/functions
                     .col-12.col-md-5
                         p Cuando estos datos se combinan de tal manera que en conjunto dan una idea elaborada sobre aquel objeto o concepto, entonces decimos que tenemos una información: en el ejemplo anterior, esos datos ordenados y relacionados nos dan la descripción del edificio donde está el apartamento que se quiere comprar (Marco et al., 2013).
 
-                        p En las empresas, puedo tomar todos los datos, recopilarlos adecuadamente y convertirlos en información relevante que pueda permitir tomar decisiones de forma objetiva, por ejemplo, dada la cantidad de personas en un turno y la cantidad de unidades producidas, puedo establecer si el costo de producción por cada unidad, aumento, disminuyó o se mantuvo estable frente a la semana anterior.
+                        p En las empresas, puedo tomar todos los datos, recopilarlos adecuadamente y convertirlos en información relevante que pueda permitir tomar decisiones de forma objetiva, por ejemplo, dada la cantidad de personas en un turno y la cantidad de unidades producidas, puedo establecer si el costo de producción por cada unidad, aumentó, disminuyó o se mantuvo estable frente a la semana anterior.
 
                     .col-12.col-md-6.text-center.ml-3
                         img(src="assets/images/pages/ilustraciones/conceptos2.png").img-fluid
