--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -42,7 +42,7 @@ include ../mixins/functions
             .card-body
                 p Los Centros de Distribución no funcionan como islas dentro de una organización, es necesaria la interacción permanente con sus diferentes áreas, ya que con su funcionamiento sistémico logran dar continuidad a la información que ingresa, por ejemplo: un pedido de un cliente puede pasar desde el área de servicio al cliente o de ventas a compras, luego a producción y por último, al proceso de empaque y despachos, manteniendo siempre las especificaciones de la solicitud inicial del cliente, agregando valor en cada actividad.
                 br
-                p Ver un centro de distribución como un sistema, permite incluir diferentes actividades y procesos que participan en la operación, tales actividades son: los procesos de entrada hacen referencia a toda la información que ingresa o algún tipo de recurso que se requiere para que el centro de distribución funcione, en este caso serían los productos o servicios comprados, la información suministrada por lo proveedores y clientes y el resultado de procesos de logística inversa. En cuanto a los procesos internos, significa las actividades de almacenamiento de materias o mercancía, administración optimo del inventario, atención oportuna de los pedidos, facturación, cargue y despacho de lo almacenado.
+                p Ver un centro de distribución como un sistema, permite incluir diferentes actividades y procesos que participan en la operación, tales actividades son: los procesos de entrada hacen referencia a toda la información que ingresa o algún tipo de recurso que se requiere para que el centro de distribución funcione, en este caso serían los productos o servicios comprados, la información suministrada por lo proveedores y clientes y el resultado de procesos de logística inversa. En cuanto a los procesos internos, significa las actividades de almacenamiento de materias o mercancía, administración óptimo del inventario, atención oportuna de los pedidos, facturación, cargue y despacho de lo almacenado.
                 br
                 p Dentro de los procesos de salida, se contemplan las acciones de transporte, distribución y entrega eficiente de productos, servicio al cliente y servicio posventa.
 
@@ -117,7 +117,7 @@ include ../mixins/functions
                         img(src="assets/images/pages/ilustraciones/actividades2.svg").custom-item-img.my-2
                         .card.bd-color-1.mb-5
                             .card-body.bg-color-1
-                                strong Procesos de Almacenamiento: 
+                                strong Procesos de almacenamiento: 
                                 |tiene como fin proteger y conservar los materiales o mercancía en condiciones óptimas durante un espacio de tiempo determinado, es decir, con las características y atributos con los cuales ingresaron al centro y con las que el cliente las necesita para satisfacer sus necesidades. 
 
                 
@@ -127,7 +127,7 @@ include ../mixins/functions
                         img(src="assets/images/pages/ilustraciones/actividades3.svg").custom-item-img.my-2
                         .card.bd-color-1.mb-5
                             .card-body.bg-color-1
-                                    strong Procesos de Salida: 
+                                    strong Procesos de salida: 
                                     |está compuesto por las actividades al final del flujo dentro del centro, tales como el picking, empaque y embarque.
 
             img.img-a.my-5.py-3(src="assets/images/pages/ilustraciones/actividades_secuenciales.svg", style="background-color:white; border-radius:60px").img-fluid.col-11
@@ -158,6 +158,6 @@ include ../mixins/functions
                 .col-1.col-md-1.text-center(style="display: flex; justify-content: initial; flex-direction: column;")
                      img(src="assets/images/pages/ilustraciones/comilla1.svg").img-fluid.ml-5
                 .col-10.col-md-10
-                    p.mb-0.ml-4 Según Karla Escalante, autora del libro Estrategias Competitivas, establece que estas son la combinación de los fines (metas) por los cuales se está esforzando la empresa y los medios (políticas) con los cuales está buscando llegar a ellos y establece un proceso de formulación que contempla identificar el sector del mercado en que se encuentra posicionada actualmente la competencia, establecer que está sucediendo en el entorno y que es lo que debería estar haciendo la empresa. Lo anterior resalta la necesidad de conocerse como empresa, su entorno y lógicamente la competencia, con el fin de definir cuál será el concepto con el cual se logrará un determinado fin, que estará relacionado con las sostenibilidad de la organización en un mercado, el cual esta tan dinámico que necesita más herramientas para agregarle valor a su operación que al final el cliente pueda percibir una experiencia diferente a la que le pueden estar ofreciendo, para satisfacer sus necesidades.                    
+                    p.mb-0.ml-4 Según Karla Escalante, autora del libro Estrategias Competitivas, establece que estas son la combinación de los fines (metas) por los cuales se está esforzando la empresa y los medios (políticas) con los cuales está buscando llegar a ellos y establece un proceso de formulación que contempla identificar el sector del mercado en que se encuentra posicionada actualmente la competencia, establecer qué está sucediendo en el entorno y qué es lo que debería estar haciendo la empresa. Lo anterior resalta la necesidad de conocerse como empresa, su entorno y lógicamente la competencia, con el fin de definir cuál será el concepto con el cual se logrará un determinado fin, que estará relacionado con las sostenibilidad de la organización en un mercado, el cual está tan dinámico que necesita más herramientas para agregarle valor a su operación que al final el cliente pueda percibir una experiencia diferente a la que le pueden estar ofreciendo, para satisfacer sus necesidades.                    
                 .col-1.col-md-1.text-center(style="display: flex; justify-content: end; flex-direction: column;")
                     img(src="assets/images/pages/ilustraciones/comilla2.svg").img-fluid.mt-4.mr-5
